--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,14 +21,17 @@ android {
 }
 
 dependencies {
+    final SUPPORT_VERSION = '28.0.0'
+    final RETROFIT_VERSION = '2.4.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_VERSION"
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_VERSION"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     testImplementation 'junit:junit:4.12'
