--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,30 +21,25 @@ android {
 }
 
 dependencies {
-    final ANDROIDX_VERSION = '1.0.2'
-    final RETROFIT_VERSION = '2.4.0'
+    final AppCompatVersion = '1.0.2'
+    final RecyclerViewVersion = '1.0.0'
+    final ConstraintLayoutVersion = '2.0.0-alpha3'
+    final RetrofitVersion = '2.4.0'
+    final CoroutinesVersion = '0.27.0-eap13'
+    final CoroutinesAdapterVersion = '0.9.2'
+    final LoggingInterceptorVersion = '3.9.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$ANDROIDX_VERSION"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
-    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-    implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation "androidx.appcompat:appcompat:$AppCompatVersion"
+    implementation "androidx.recyclerview:recyclerview:$RecyclerViewVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$ConstraintLayoutVersion"
+    implementation "com.squareup.retrofit2:retrofit:$RetrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$RetrofitVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$CoroutinesVersion"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$CoroutinesAdapterVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$LoggingInterceptorVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-}
-
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
-
-androidExtensions {
-    experimental = true
 }
